# AP1-FlightSimulator-Interpreter

./: BindCommand.cpp  BindCommand.h  CMakeLists.txt  Command.h  CommandExpressionAdapter.h  ConditionParser.cpp  ConditionParser.h  ConnectCommand.cpp  ConnectCommand.h  DataBinds.cpp  DataBinds.h  DataCommands.cpp  DataCommands.h  DataReaderServer.cpp  DataReaderServer.h  DataVars.cpp  DataVars.h  DataWriterClient.cpp  DataWriterClient.h  EntercCommand.cpp  EntercCommand.h  EqualCommand.cpp  EqualCommand.h  ExitCommand.cpp  ExitCommand.h  Expression.cpp  Expression.h  ExpressionUtils.cpp  ExpressionUtils.h  IfCommand.cpp  IfCommand.h  OpenDataServerCommand.cpp  OpenDataServerCommand.h  PrintCommand.cpp  PrintCommand.h  README.md  SleepCommand.cpp  SleepCommand.h  TextAnalyzer.cpp  TextAnalyzer.h  (+8 more)
First milestone - interpreter/: conf.txt  details.txt  log.txt
file/: commands.txt
